--- a/src/app/main/Components/product-list/product-list.component.html
+++ b/src/app/main/Components/product-list/product-list.component.html
@@ -1,1 +1,15 @@
-<p>product-list works!</p>
+<div fxLayout="column" fxFlex="100%" fxLayoutAlign="center center">
+  <button mat-icon-button color="primary" routerLink="/add-product"><mat-icon>add_circle</mat-icon></button>
+  <div class="product-list-container full-width" fxLayout="column" fxLayoutAlign="center center">
+    <mat-card class="product-list-box" fxLayoutAlign="space-between center" *ngFor="let product of productListData">
+      <mat-card-header>
+        <mat-card-title>{{product.name}}</mat-card-title>
+        <mat-card-subtitle>{{product.description}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-actions fxLayoutGap="5%">
+        <button mat-raised-button color="primary" (click)="onEditProduct(product.id)">Edit</button>
+        <button mat-raised-button color="warn" (click)="onDeleteProduct(product.id)">Delete</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
