--- a/src/app/main/Components/product-list/product-list.component.scss
+++ b/src/app/main/Components/product-list/product-list.component.scss
@@ -1,4 +1,177 @@
-.product-list-box {
-  margin: 20px;
-  width: 80%;
+// .product-list-box {
+//   margin: 20px;
+//   width: 80%;
+// }
+
+:root{
+  --primary-color:#6f1757,
+  // --font-family:'Roboto', sans-serif,
+}
+
+html, body{
+  background: #E3E3D8;
+    font-family: sans-serif;
+}
+
+
+.card-box{
+  width: 300px;
+  height: 500px;
+  background: white;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0;
+  transform: scale(0.95);
+  transition: box-shadow 0.5s, transform 0.5s;
+  &:hover{
+    transform: scale(1);
+    box-shadow: 5px 20px 30px rgba(0,0,0,0.2);
+  }
+  
+  .container{
+    width:100%;
+    height:100%;
+    .product-image-container{
+      height: 80%;
+      width:100%;
+      background: url(https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg) no-repeat center center; 
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
+    }
+    .product-detail-container{
+      width: 200%;
+      height: 20%;
+      transition: transform 0.5s;
+      &.clicked{
+        transform: translateX(-50%);
+      }
+      h1{
+          margin:0;
+          padding:0;
+      }
+      p{
+          margin:0;
+          padding:0;
+      }
+      .detail-sec{
+        height:100%;
+        width: 50%;
+        background: #f4f4f4;
+        position:relative;
+        float:left;
+        .details{
+          padding: 20px;
+          float: left;
+          width: calc(70% - 40px);
+        }
+        .buy{
+          float:right;
+          width: calc(30% - 2px);
+          height:100%;
+          background: #f1f1f1;
+          transition: background 0.5s;
+          border-left:solid thin rgba(0,0,0,0.1);
+          i{
+            font-size:30px;
+            padding:30px;
+            color: #6f1757;
+            transition: transform 0.5s;
+          }
+          &:hover{
+            background: #6f1757;
+          }
+          &:hover i{
+            transform: translateY(5px);
+            color:#fff;
+          }
+        }
+      }
+    }
+  }
+  
+  .info-container{
+    z-index:9;
+    background-color: #6f1757;
+    // clip-path: circle(16% at 100% 0);
+    clip-path: polygon(80% 0, 100% 0, 100% 15%, 80% 8%);
+    width:100%;
+    height:100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: all 0.5s, border-radius 2s, top 1s;
+    overflow: visible;
+    .info-icon{
+      position:absolute;
+      right:13px;
+      top:13px;
+      color:white;
+      opacity: 1;
+    }
+    &:hover{
+      clip-path: polygon(80% 0, 100% 0, 100% 90%, 80% 70%);
+                  right:0;
+      top:0;
+      border-radius: 0;
+      height:50%;
+      .info-icon{
+        opacity: 0;
+        right:15px;
+        top:15px;
+      }
+      .contents{
+        opacity: 1;
+        transform: scale(1);
+        transform: translateY(0);
+      }
+    }
+    .contents{
+      padding: 5%;
+      opacity: 0;
+      transform: scale(0.5);
+      transform: translateY(-200%);
+      transition: opacity 0.2s, transform 0.8s;
+      h1, p, table{
+        color: white;
+      }
+      p{
+        font-size:18px;
+      }
+    }
+  }
+}
+
+.add-product-button button{
+  border-radius: 10px 10px 10px 10px !important;
+}
+
+.title p{
+  font-size: 38px;
+  margin: 0;
+}
+
+.title mat-icon{
+  $size:38px;
+  font-size: $size;
+  width: $size;
+  height: $size;
+}
+
+.add-product-button button{
+  background-color: #6f1757;
+}
+
+.details h1{
+  color: #6f1757;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.descripton p{
+  font-size: 26px;
+  text-transform: capitalize;
 }
