--- a/src/app/main/Components/product-list/product-list.component.html
+++ b/src/app/main/Components/product-list/product-list.component.html
@@ -40,48 +40,21 @@
             </div>
             <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
           </div>
-          <!-- <div class="cart-sec">
-            <div class="details">
-              <h1>Chair</h1>
-            </div>
-          </div> -->
         </div>
       </div>
-      <div class="info-container" fxLayoutAlign="end center">
-        <div class="full-width" fxLayout="column" fxLayoutAlign="space-around center">
-          <button mat-icon-button color="accent" routerLink="add-product">
+      <div class="info-container" fxLayoutAlign="end start">
+        <div class="info-buttons" fxLayout="column" fxLayoutAlign="space-around center">
+          <button mat-icon-button (click)="onViewProduct(product.id)">
             <mat-icon>visibility</mat-icon>
           </button>
-          <button mat-icon-button color="primary" routerLink="add-product">
+          <button mat-icon-button (click)="onEditProduct(product.id)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button color="warn" routerLink="add-product">
+          <button mat-icon-button (click)="onDeleteProduct(product.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </div>
         <div class="info-icon"><i class="material-icons">info_outline</i></div>
-        <div class="contents" fxFlex="100%" fxLayoutAlign="center start">
-          <div class="description" fxFlex="100%" fxLayoutAlign="center center">
-            <div class="action-container" fxLayout="column" fxFlex="100%" fxLayoutAlign="center start">
-              <!-- <div class="full-width" fxLayoutAlign="space-around center">
-                <button mat-fab extended color="accent" routerLink="add-product">
-                  <mat-icon>visibility</mat-icon>
-                  View
-                </button>
-                <button mat-fab extended color="primary" routerLink="add-product">
-                  <mat-icon>edit</mat-icon>
-                  Edit
-                </button>
-                <button mat-fab extended color="warn" routerLink="add-product">
-                  <mat-icon>delete</mat-icon>
-                  Delete
-                </button>
-              </div> -->
-              <!-- <div class="full-width" fxLayoutAlign="center center">
-              </div> -->
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
