--- a/src/app/main/Components/add-product/add-product.component.scss
+++ b/src/app/main/Components/add-product/add-product.component.scss
@@ -1,3 +1,13 @@
 .form-container {
   height: 100vh;
 }
+
+.form-box {
+  padding: 10%;
+  border: 1px solid #6f1757;
+}
+
+.form-container button {
+  background-color: #6f1757;
+  color: #fff;
+}
