--- a/src/app/main/Components/add-product/add-product.component.html
+++ b/src/app/main/Components/add-product/add-product.component.html
@@ -1,40 +1,42 @@
-<div class="form-container" fxFlex="100%" fxLayoutAlign="center center" fxLayout="column">
-  <form [formGroup]="myGroup" class="full-width" fxLayoutAlign="center center" fxLayout="column">
-    <!-- <div>
-      <mat-form-field appearance="fill">
-        <mat-label>Product Id</mat-label>
-        <input formControlName="id" type="number" matInput placeholder="Placeholder">
-      </mat-form-field>
-    </div> -->
-    <div>
-      <mat-form-field appearance="fill">
-        <mat-label>Product Name</mat-label>
-        <input formControlName="name" matInput placeholder="Placeholder">
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field appearance="fill">
-        <mat-label>Description</mat-label>
-        <input formControlName="description" matInput placeholder="Placeholder">
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field appearance="fill">
-        <mat-label>Price</mat-label>
-        <input formControlName="price" type="number" matInput placeholder="Placeholder">
-      </mat-form-field>
-    </div>
-  </form>
-  <div class="button-container full-width" fxLayoutAlign="center center" fxLayoutGap="5%">
-    <div class="back-button">
-      <button mat-raised-button color="primary" routerLink="/">Back</button>
-    </div>
-    <div class="reset-button">
-      <button mat-raised-button color="primary">Reset</button>
-    </div>
-    <div class="submit-button">
-      <button mat-raised-button color="primary" (click)="onSubmit()">{{!isUpdateScenario ? 'Submit' :
-        'Update'}}</button>
+<div class="form-container search-box" fxFlex="100%" fxLayoutAlign="center center">
+  <div class="form-box" fxFlex="70%" fxLayoutAlign="center center" fxLayout="column">
+    <form [formGroup]="myGroup" class="full-width" fxLayoutAlign=" center center" fxLayout="column">
+      <div class="full-width" fxLayoutAlign="center center" fxLayoutGap="5%">
+        <div fxFlex="50%" fxLayoutAlign="center center">
+          <mat-form-field appearance="fill" fxFlex="100%">
+            <mat-label>Product Name</mat-label>
+            <input formControlName="name" matInput placeholder="Eg.Naveen">
+            <mat-error *ngIf="myGroup?.get('name')?.hasError('required')">This field is required</mat-error>
+          </mat-form-field>
+        </div>
+        <div fxFlex="50%" fxLayoutAlign="center center">
+          <mat-form-field appearance="fill" fxFlex="100%">
+            <mat-label>Price</mat-label>
+            <input formControlName="price" type="number" matInput placeholder="Eg.45.00">
+            <mat-error *ngIf="myGroup?.get('price')?.hasError('required')">This field is required</mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="full-width" fxLayoutAlign="center center">
+        <mat-form-field appearance="fill" fxFlex="100%">
+          <mat-label>Description</mat-label>
+          <textarea formControlName="description" matInput placeholder="Eg.something special"></textarea>
+        </mat-form-field>
+      </div>
+    </form>
+    <div class="button-container full-width" fxLayoutAlign="center center" fxLayoutGap="5%">
+      <div class="back-button">
+        <button mat-raised-button routerLink="/">Back</button>
+      </div>
+      <div class="reset-button">
+        <button mat-raised-button (click)="myGroup.reset()">Reset</button>
+      </div>
+      <div class="submit-button">
+        <button *ngIf="!productDetails" [disabled]="myGroup.invalid" mat-raised-button
+          (click)="onSubmit()">Submit</button>
+        <button *ngIf="productDetails" [disabled]="myGroup.invalid" mat-raised-button
+          (click)="onUpdate()">Update</button>
+      </div>
     </div>
   </div>
 </div>
