--- a/src/app/main/Components/product-list/product-list.component.scss
+++ b/src/app/main/Components/product-list/product-list.component.scss
@@ -3,20 +3,34 @@
 //   width: 80%;
 // }
 
-:root{
-  --primary-color:#6f1757,
-  // --font-family:'Roboto', sans-serif,
+:root {
+  --primary-color: #6f1757,
+    // --font-family:'Roboto', sans-serif,
 }
 
-html, body{
+.spacer {
+  flex: 1 1 auto;
+}
+
+html,
+body {
   background: #E3E3D8;
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
 
+.header-container {
+  width: 90%;
+  margin: 3% 0;
+}
 
-.card-box{
-  width: 300px;
-  height: 500px;
+// .product-list-container {
+//   width: 93%;
+// }
+
+.card-box {
+  width: 250px;
+  height: 400px;
+  margin: 3% 3% !important;
   background: white;
   margin: auto;
   position: relative;
@@ -25,105 +39,117 @@ html, body{
   box-shadow: 0;
   transform: scale(0.95);
   transition: box-shadow 0.5s, transform 0.5s;
-  &:hover{
-    transform: scale(1);
-    box-shadow: 5px 20px 30px rgba(0,0,0,0.2);
-  }
-  
-  .container{
-    width:100%;
-    height:100%;
-    .product-image-container{
+
+  .container {
+    width: 100%;
+    height: 100%;
+
+    .product-image-container {
       height: 80%;
-      width:100%;
-      background: url(https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg) no-repeat center center; 
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      width: 100%;
+      background: url(https://cdn.pixabay.com/photo/2024/04/06/14/03/ai-generated-8679367_640.jpg) no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
     }
-    .product-detail-container{
-      width: 200%;
+
+    .product-detail-container {
+      width: 100%;
       height: 20%;
       transition: transform 0.5s;
-      &.clicked{
+
+      &.clicked {
         transform: translateX(-50%);
       }
-      h1{
-          margin:0;
-          padding:0;
+
+      h1 {
+        margin: 0;
+        padding: 0;
       }
-      p{
-          margin:0;
-          padding:0;
+
+      p {
+        margin: 0;
+        padding: 0;
       }
-      .detail-sec{
-        height:100%;
+
+      .detail-sec {
+        height: 100%;
         width: 50%;
         background: #f4f4f4;
-        position:relative;
-        float:left;
-        .details{
+        position: relative;
+        float: left;
+
+        .details {
           padding: 20px;
           float: left;
           width: calc(70% - 40px);
         }
-        .buy{
-          float:right;
+
+        .buy {
+          float: right;
           width: calc(30% - 2px);
-          height:100%;
+          height: 100%;
           background: #f1f1f1;
           transition: background 0.5s;
-          border-left:solid thin rgba(0,0,0,0.1);
-          i{
-            font-size:30px;
-            padding:30px;
+          border-left: solid thin rgba(0, 0, 0, 0.1);
+          cursor: pointer;
+
+          i {
+            font-size: 30px;
             color: #6f1757;
             transition: transform 0.5s;
           }
-          &:hover{
+
+          &:hover {
             background: #6f1757;
           }
-          &:hover i{
-            transform: translateY(5px);
-            color:#fff;
+
+          &:hover i {
+            color: #fff;
           }
         }
       }
     }
   }
-  
-  .info-container{
-    z-index:9;
+
+  .info-container {
+    z-index: 9;
     background-color: #0000006e;
     // clip-path: circle(16% at 100% 0);
     clip-path: polygon(80% 0, 100% 0, 100% 15%, 80% 8%);
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     right: 0;
     transition: all 0.5s ease;
     overflow: visible;
-    .info-icon{
-      position:absolute;
-      right:13px;
-      top:13px;
-      color:white;
+
+    .info-icon {
+      position: absolute;
+      right: 13px;
+      top: 13px;
+      color: white;
       opacity: 1;
     }
-    .info-buttons{
+
+    .info-buttons {
       opacity: 0;
     }
-    &:hover{
-      clip-path: polygon(80% 0, 100% 0, 100% 70%, 80% 55%);
-      height:50%;
-      .info-icon{
+
+    &:hover {
+      clip-path: polygon(80% 0, 100% 0, 100% 80%, 80% 70%);
+      height: 50%;
+
+      .info-icon {
         display: none;
       }
-      .info-buttons{
-        opacity: 1; 
-        button{
+
+      .info-buttons {
+        opacity: 1;
+
+        button {
           color: #fff;
         }
       }
@@ -131,33 +157,44 @@ html, body{
   }
 }
 
-.add-product-button button{
+.add-product-button button {
   border-radius: 10px 10px 10px 10px !important;
 }
 
-.title p{
+.title p {
   font-size: 38px;
   margin: 0;
 }
 
-.title mat-icon{
-  $size:38px;
+.title mat-icon {
+  $size: 38px;
   font-size: $size;
   width: $size;
   height: $size;
 }
 
-.add-product-button button{
+.add-product-button button {
   background-color: #6f1757;
 }
 
-.details h1{
+.details h1 {
   color: #6f1757;
   font-weight: 500;
   text-transform: capitalize;
 }
 
-.descripton p{
+.descripton p {
   font-size: 26px;
   text-transform: capitalize;
+}
+
+.error-img-container {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.hover-element {
+  transform: scale(1);
+  box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.2);
 }
