--- a/src/app/main/Components/add-product/add-product.component.scss
+++ b/src/app/main/Components/add-product/add-product.component.scss
@@ -1,13 +1,21 @@
-.form-container {
-  height: 100vh;
-}
-
 .form-box {
-  padding: 10%;
-  border: 1px solid #6f1757;
+  padding: 5%;
+  border: 1px solid var(--primary-color);
 }
 
-.form-container button {
-  background-color: #6f1757;
+.button-container button {
+  background-color: var(--primary-color);
   color: #fff;
+}
+
+mat-card-title {
+  color: var(--primary-color);
+}
+
+.example-card {
+  box-shadow: 2px 2px 5px #000000;
+}
+
+.form-content {
+  width: 90%;
 }
