--- a/src/app/shared/Components/snackbar/snackbar.component.html
+++ b/src/app/shared/Components/snackbar/snackbar.component.html
@@ -1,1 +1,6 @@
-<p>snackbar works!</p>
+<span class="example-pizza-party" matSnackBarLabel>
+  {{snackbarData.message}}
+</span>
+<span matSnackBarActions>
+  <button mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction();">OK</button>
+</span>
